--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<!--The content below is only a placeholder and can be replaced.-->
 <h1 class="text-center">Orario Docenti - Classi - Aule</h1>
 <div class="row">
   <div class="col-sm-8 col-xs-12" >
@@ -70,9 +69,9 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let ora of objectKeys(orariotable$)">
+              <tr *ngFor="let ora of hours">
                 <td>{{ora}}</td>
-                <td *ngFor="let giorno of objectKeys(orariotable$[ora])" [attr.id]="ora + ' ' + giorno" [attr.rowspan]="orariotable$[ora][giorno]['DURATA']" style="vertical-align:middle;">
+                <td *ngFor="let giorno of objectKeys(orariotable$[ora])" [attr.id]="ora + ' ' + giorno" [attr.rowspan]="orariotable$[ora][giorno]['DURATA']" style="vertical-align:middle;" [attr.class]="giorno">
                   <div class="materia">{{orariotable$[ora][giorno]['MAT_COD']}}</div>
                   <br>
                   <button class="btn btn-primary btn-md btnDocente" (click)="buttonDocenteClick(orariotable$[ora][giorno]['DOC_COGN_NOME1'])" *ngIf="orariotable$[ora][giorno]['DOC_COGN_NOME1']">{{orariotable$[ora][giorno]["DOC_COGN1"]}}</button>
